# fantasy-football-mcp-public

./: .dockerignore  .env  .env.cloudrun  .env.example  .env.render  .gitignore  CLAUDE.md  CLAUDE_AI_CONNECTION.md  CLEANUP_SUMMARY.md  COMMIT_SHA  CONTRIBUTING.md  Dockerfile  ENHANCED_MCP_APPROACH.md  INSTALLATION.md  LICENSE  LIVE_API_TESTING_SUMMARY.md  LIVE_API_TEST_RESULTS.md  PHASE_2B_REFACTOR_SUMMARY.md  README.md  REDDIT_SETUP.md  ROSTER_CONSOLIDATION.md  SECURITY.md  SETUP_INSTRUCTIONS.md  TEST_SUITE_SUMMARY.md  YAHOO_AUTH_REALITY.md  YAHOO_CLIENT_ID_FIX.md  YAHOO_SETUP.md  YAHOO_SETUP_GUIDE.md  app.py  check_deployment.py  cleanup_results.py  cloud_run_server.py  demo_expected_responses.py  deploy_to_cloudrun.sh  deploy_to_render.sh  enhanced_mcp_prompts.py  enhanced_mcp_tools.py  example_client_llm_usage.py  fantasy_football_multi_league.py  fastmcp_server.py  (+26 more)
.claude/agents/: fantasy-football-analyst.md  yahoo-sports-api-expert.md
.qoder/quests/: mcp-lineup-tool-fix.md
config/: settings.py
docs/: BYE_WEEKS_FIX.md  PROMPTS_AND_RESOURCES.md  WAIVER_WIRE_VALIDATION_FIX.md  YAHOO_AUTH_GUIDE.md
examples/: demo_enhancement_layer.py  example_client_llm_usage.py  hybrid_optimizer_example.py  yahoo_auth_example.py
examples/demos/: demo_consolidated_roster.py  demo_ff_get_roster.py  demo_ff_get_waiver_wire.py
src/: lineup_optimizer.py  matchup_analyzer.py  mcp_server.py  sleeper_api.py  yahoo_api_utils.py
src/agents/: __init__.py  cache_manager.py  config.py  data_fetcher.py  decision.py  draft_evaluator.py  hybrid_optimizer.py  integration.py  llm_enhancement.py  optimization.py  reddit_analyzer.py  roster_detector.py  statistical.py  user_interaction_engine.py  yahoo_auth.py
src/api/: __init__.py  yahoo_client.py  yahoo_utils.py
src/data/: bye_weeks_2025.json
src/handlers/: __init__.py  admin_handlers.py  analytics_handlers.py  draft_handlers.py  league_handlers.py  matchup_handlers.py  player_handlers.py  roster_handlers.py
src/models/: draft.py  lineup.py  matchup.py  player.py
src/parsers/: __init__.py  yahoo_parsers.py
src/services/: __init__.py  player_enhancement.py  reddit_service.py
src/strategies/: __init__.py  aggressive.py  balanced.py  base.py  conservative.py
src/utils/: bye_weeks.py  constants.py  roster_configs.py  scoring.py
tests/: README.md  TEST_CLEANUP_PLAN.md  comprehensive_test.py  conftest.py  test_consolidated_tool.py  test_deployed_server.py  test_enhanced_direct.py  test_enhanced_fix.py  test_fastmcp_direct.py  test_fastmcp_server.py  test_fastmcp_simple.py  test_ff_get_roster.py  test_ff_get_waiver_wire.py  test_live_api.py  test_logic.py  test_mcp_client.py  test_oauth.py  test_position_fix.py  test_quick_fix.py  test_real_data.py  test_roster_live.py  test_sleeper_integration.py
tests/integration/: __init__.py  test_mcp_tools.py
tests/manual/: test_ff_get_roster.py  test_logic.py  test_position_fix.py  test_sleeper_integration.py
tests/unit/: __init__.py  test_api_client.py  test_bye_weeks.py  test_bye_weeks_utility.py  test_handlers.py  test_lineup_optimizer.py  test_parsers.py
tests_and_validation/: README.md  __init__.py  analyze_flex_performance.py  run_real_decisions.py  run_validation.py
tests_and_validation/data/: .gitkeep
tests_and_validation/validation/: advanced_validator.py  backtest_runner.py  flex_decision_tester.py  historical_validator.py  real_decision_validator.py
utils/: reauth_yahoo.py  refresh_token.py  refresh_yahoo_token.py  setup_yahoo_auth.py  verify_setup.py
utils_scripts/: reauth_yahoo.py
